public/css/ie.scss     Fix for an IE7-bug with jquery.slidedown() where the content disappears as     soon as it's fully visible.
    Thanks to: http://blog.familymatic.com/2009/10/jquery-slidedown-and-internet-explorer-7/

public/css/ie8.min.css
public/css/ie.min.css
    Re-pack

--- a/public/css/ie.scss
+++ b/public/css/ie.scss
@@ -41,6 +41,16 @@
   zoom:   1;
 }
 
+.collapsable {
+
+  .content {
+    /* Fix for IE7-bug with jquery.slidedown() where the div disappears as soon
+     * as it becomes fully visible.
+     */
+    zoom: 1;
+  }
+}
+
 // For tabs.scss
 @import "ie-corner";
 #pageHeader {
